--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -4,9 +4,11 @@ on:
   schedule:
     - cron: 30 0/4 * * *
   push:
-    branches: [ master ]
+    branches:
+      - master
   pull_request:
-    branches: [ master ]
+    branches: 
+      - master
   workflow_dispatch:
 
 jobs:
